adicionar coluna saúde e internacional

--- a/index.html
+++ b/index.html
@@ -132,22 +132,63 @@
                         <a href="#" title="Leia a notícia completa">Ler mais</a>
                 </article>
                 <article>
-                    <img src="./imagens/euro.jpg" alt="Várias notas de euro" />
+                    <img src="./imagens/vacina-covid.jpg" alt="Várias vacínas de covid" />
                     <header>
-                        <time>13/07/2022 às 12:35</time>
+                        <time>17/03/2023 às 10:04</time>
                     </header>
-                    <h3>Euro em queda de 0.40%</h3>
+                    <h3>Covid-19: Anvisa atesta segurança de doses da vacina bivalente</h3>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
                     </p>
                     <a href="#" title="Leia a notícia completa">Ler mais</a>
                 </article>
                 <article>
-                    <img src="./imagens/petroleo.jpg" alt="Extração de petróleo" />
+                    <img src="./imagens/frascos-da-vacina.jpg" alt="Frascos de vacina" />
                     <header>
-                        <time>13/07/2022 às 12:35</time>
+                        <time>08/03/2023 às 17:19</time>
                     </header>
-                    <h3>Alta no preço do barril do petróleo</h3>
+                    <h3>Varíola dos macacos: Saúde vai começar a vacinar dia 13</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
+                    </p>
+                    <a href="#" title="Leia a notícia completa">Ler mais</a>
+                </article>
+            <article>
+        </div>
+    </div>
+</section>
+<section id="world">
+    <div class="container">
+        <h2>Internacional</h2>
+            <div class="articles">
+                <article>
+                    <img src="./imagens/torre-de-igreja.webp" alt="Musquito da dengue" />
+                        <header>
+                            <time>17/03/2023 às 15:57</time>
+                        </header>
+                        <h3>Torre de igreja ressurge após reservatório secar na Espanha</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
+                        </p>
+                        <a href="#" title="Leia a notícia completa">Ler mais</a>
+                </article>
+                <article>
+                    <img src="./imagens/azeitona.jpg" alt="Azeitonas" />
+                    <header>
+                        <time>17/03/2023 às 12:17</time>
+                    </header>
+                    <h3>Dezesseis pessoas detidas na Espanha pelo roubo de 17,5 toneladas de azeitonas</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
+                    </p>
+                    <a href="#" title="Leia a notícia completa">Ler mais</a>
+                </article>
+                <article>
+                    <img src="./imagens/pessoas-protestam.jpg" alt="Frascos de vacina" />
+                    <header>
+                        <time>16/03/2023 às 15:21</time>
+                    </header>
+                    <h3>Espanha aprova lei contra maus-tratos aos animais</h3>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
                     </p>
